...
    }



    AppTheme() {
        Scaffold(
            modifier = Modifier.fillMaxSize().testTag("create_trip_screen"),
            topBar = {
                SmallTopAppBar(
                    title = {
                        Text(stringResource(R.string.create_new_trip))
                    },
                    colors = TopAppBarDefaults.smallTopAppBarColors(
...
                                modifier = Modifier
                                    .fillMaxWidth(), horizontalArrangement = Arrangement.SpaceAround
                            ) {
                                TitleField(
                                    modifier = Modifier
                                        .weight(1f)
                                        .padding(end = 4.dp).testTag("create_trip_title_tag"),
                                    state.title,
                                    onValueChange = viewModel::titleChanged,
                                    stateValidation.validTitle,
                                    localFocusManager,
                                    onImeAction = { datesFocusRequest.requestFocus() }
                                )
...
                                        viewModel.clearAllData()
                                        viewModel.upPress()
                                    }) {
                                        Text(text = stringResource(R.string.cancel))
                                    }
                                    androidx.compose.material3.Button(
                                        modifier = Modifier.testTag("create_trip_create_tag"),
                                        onClick = { viewModel.createNewTrip() },
                                        enabled = stateValidation.validTitle && stateValidation.validDate && stateValidation.dateFocusedDirty && stateValidation.titleFocusedDirty,
                                    ) {
                                        Text(
                                            modifier = Modifier.padding(start = 12.dp, end = 12.dp),
                                            text = stringResource(R.string.create)
...
